--- a/module-admin/src/main/resources/templates/example.html
+++ b/module-admin/src/main/resources/templates/example.html
@@ -369,18 +369,8 @@
 
                         <div class="mb-0 form-group row">
                             <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>답변공개</strong></div>
-                            <div class="col-12">
-                                <div class="border-checkbox-section">
-                                    <div class="border-checkbox-group">
-                                        <input type="radio" name="rlsYn" id="rlsYn1" value="Y" checked="" style="display:none;">
-                                        <label class="form-label border-checkbox-label" for="clsfCds1">공기</label>
-                                    </div>
-                                    <div class="border-checkbox-group">
-                                        <input type="radio" name="rlsYn" id="rlsYn2" value="Y" checked="" style="display:none;">
-                                        <label class="form-label border-checkbox-label" for="clsfCds2">기후변화</label>
-                                    </div>
-                                </div>
-<!--                                <div class="form-radio">
+                            <div class="col-12 mb-3">
+                                <div class="form-radio">
                                     <div class="radio radio-inline">
                                         <label class="mb-0 form-label'" style="">
                                             <input type="radio" name="rlsYn" id="rlsYn1" value="Y" checked="">
@@ -393,7 +383,7 @@
                                             <i class="helper"></i>비공개
                                         </label>
                                     </div>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
 
@@ -416,18 +406,6 @@
                             </div>
                         </div>
 
-                        <div class="mb-0 form-group required">
-                            <div class="dropdown-primary dropdown open">
-                                <button class="btn btn-primary dropdown-toggle waves-effect waves-light " type="button" id="dropdown-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Primary</button>
-                                <div class="dropdown-menu" aria-labelledby="dropdown-2" data-dropdown-in="fadeIn" data-dropdown-out="fadeOut">
-                                    <a class="dropdown-item waves-light waves-effect" href="#">Action</a>
-                                    <a class="dropdown-item waves-light waves-effect" href="#">Another action</a>
-                                    <a class="dropdown-item waves-light waves-effect" href="#">Something else here</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item waves-light waves-effect" href="#">Something else here</a>
-                                </div>
-                            </div>
-                        </div>
                         <div class="mb-0 form-group required">
                             <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>분류</strong></div>
                             <div class="border-checkbox-section">
