--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -54,7 +54,8 @@
         <script type="text/javascript" th:src="@{/files/bower_components/jquery/dist/jquery.min.js}"></script>
 
         <!-- Data tables-->
-        <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/datatables.net-dt/css/jquery.dataTables.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/datatables.net-dt/css/jquery.dataTables.min.css}">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.6.2/css/select.dataTables.min.css"/>
 
     </head>
 </th:block>
