--- a/module-admin/src/main/resources/static/css/datatables.css
+++ b/module-admin/src/main/resources/static/css/datatables.css
@@ -479,6 +479,7 @@ table.dataTable td {
     color: inherit !important;
     border: 1px solid transparent;
     background: #F3F3F3;
+    /*padding: -1em 0em;*/
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.previous {
     padding-right: 2em;
@@ -490,7 +491,6 @@ table.dataTable td {
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-    color: inherit !important;
     /*border: 1px solid rgba(0, 0, 0, 0.3);*/
     background-color: rgba(230, 230, 230, 0.1);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(230, 230, 230, 0.1)), color-stop(100%, rgba(0, 0, 0, 0.1)));
@@ -512,40 +512,6 @@ table.dataTable td {
     border: 1px solid transparent;
     background: transparent;
     box-shadow: none;
-}
-.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-    color: white !important;
-    border: 1px solid #111111;
-    background-color: #585858;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111111));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #585858 0%, #111111 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -moz-linear-gradient(top, #585858 0%, #111111 100%);
-    /* FF3.6+ */
-    background: -ms-linear-gradient(top, #585858 0%, #111111 100%);
-    /* IE10+ */
-    background: -o-linear-gradient(top, #585858 0%, #111111 100%);
-    /* Opera 11.10+ */
-    background: linear-gradient(to bottom, #585858 0%, #111111 100%);
-    /* W3C */
-}
-.dataTables_wrapper .dataTables_paginate .paginate_button:active {
-    outline: none;
-    background-color: #2b2b2b;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b2b2b), color-stop(100%, #0c0c0c));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -moz-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-    /* FF3.6+ */
-    background: -ms-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-    /* IE10+ */
-    background: -o-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
-    /* Opera 11.10+ */
-    background: linear-gradient(to bottom, #2b2b2b 0%, #0c0c0c 100%);
-    /* W3C */
-    box-shadow: inset 0 0 3px #111;
 }
 .dataTables_wrapper .dataTables_paginate .ellipsis {
     padding: 0 1em;
@@ -609,3 +575,4 @@ table.dataTable td {
         margin-top: 0.5em;
     }
 }
+
