--- a/module-admin/src/main/resources/templates/templateManage/templateManageForm.html
+++ b/module-admin/src/main/resources/templates/templateManage/templateManageForm.html
@@ -80,7 +80,7 @@
 </form>
 
 <script type="text/javascript">
-    var validator= $("#mmnwsInsertForm").validate({
+    var validator= $("#templateManageForm").validate({
         rules: {
             clsfCd		:	{ required: true }
             ,oxprNm		:	{ required: true }
@@ -105,6 +105,7 @@
         if(!confirm("저장하시겠습니까?")) return;
 
         var data =  $("#templateManageForm").serialize();
+
         if(displayWorkProgress()){
             $.ajax({
                 url : "/mng/mmnws/insertMmnws.do",
