--- a/module-admin/src/main/resources/templates/example.html
+++ b/module-admin/src/main/resources/templates/example.html
@@ -26,6 +26,84 @@
         .paginate_button.current {
             background: #ff8031 !important;
         }
+
+        .custom-select-ul > li:hover {
+            background: #f8f7f7;
+            color: #ff8031;
+        }
+
+        .selectBox2 * { box-sizing: border-box; }
+        .selectBox2 {
+            position: relative;
+            width: 100%;
+            height: 35px;
+            border-radius: 4px;
+            border: 2px solid lightcoral;
+            background: url('https://freepikpsd.com/media/2019/10/down-arrow-icon-png-7-Transparent-Images.png') calc(100% - 7px) center no-repeat;
+            background-size: 20px;
+            cursor: pointer;
+        }
+
+        .selectBox2:after {
+            content: '';
+            display: block;
+            width: 2px;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: 35px;
+            background: lightcoral;
+        }
+
+        .selectBox2 .label {
+            display: flex;
+            align-items: center;
+            width: inherit;
+            height: inherit;
+            border: 0 none;
+            outline: 0 none;
+            padding-left: 15px;
+            background: transparent;
+            cursor: pointer;
+        }
+
+        .selectBox2 .optionList {
+            position: absolute;
+            top: 28px;
+            left: 0;
+            width: 100%;
+            background: lightcoral;
+            color: #fff;
+            list-style-type: none;
+            padding: 0;
+            border-radius: 6px;
+            overflow: hidden;
+            max-height: 0;
+            transition: .3s ease-in;
+        }
+
+        .selectBox2.active .optionList {
+            max-height: 500px;
+        }
+
+        .selectBox2 .optionItem {
+            border-bottom: 1px dashed rgb(170, 72, 72);
+            padding: 5px 15px 5px;
+            transition: .1s;
+        }
+
+        .selectBox2 .optionItem:hover {
+            background: rgb(175, 93, 93);
+        }
+
+        .selectBox2 .optionItem:last-child {
+            border-bottom: 0 none;
+        }
+
+        .selectBox2 .optionList::-webkit-scrollbar {width: 6px;}
+        .selectBox2 .optionList::-webkit-scrollbar-track {background: transparent; }
+        .selectBox2 .optionList::-webkit-scrollbar-thumb {background: #303030; border-radius: 45px;}
+        .selectBox2 .optionList::-webkit-scrollbar-thumb:hover {background: #303030;}
     </style>
     <div class="page-body">
         <div class="row">
@@ -129,6 +207,37 @@
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
                                         </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-3" >
+                                <div class="mb-0 form-group ">
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>custom</strong></div>
+                                    <div style="position:relative;">
+                                        <button class="form-control form-select form-control-round" style="text-align:left;"> 선택 </button>
+                                        <ul style="width:100%; border-radius: 10px; margin-top: 5px; z-index:2; position:absolute; padding: 0.5em 0; background:white; border:1px solid #585858;" class="custom-select-ul">
+                                            <li style="padding: 0.7em;">option 1</li>
+                                            <li style="padding: 0.7em;">option 1</li>
+                                            <li style="padding: 0.7em;">option 1</li>
+                                            <li style="padding: 0.7em;">option 1</li>
+                                            <li style="padding: 0.7em;">option 1</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-3" >
+                                <div class="mb-0 form-group">
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>custom</strong></div>
+                                    <div style="position:relative;">
+                                        <button class="form-control form-select form-control-round"> - 선택 - </button>
+                                        <ul style="width:100%; border-radius: 15px; margin-top: 5px; z-index:2; position:absolute; padding: 0.5em 0; background:white; border:1px solid #585858;" class="custom-select-ul">
+                                            <li style="padding: 0.7em;border:none">- 선택 - </li>
+                                            <li style="padding: 0.7em;border:none">option 1</li>
+                                            <li style="padding: 0.7em;border:none">option 1</li>
+                                            <li style="padding: 0.7em;border:none">option 1</li>
+                                            <li style="padding: 0.7em;border:none">option 1</li>
+                                            <li style="padding: 0.7em;border:none">option 1</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -626,6 +735,27 @@
     </div>
 
     <script>
+        /* 일반함수 */
+        const label = document.querySelector('.label');
+        const options = document.querySelectorAll('.optionItem');
+        // 클릭한 옵션의 텍스트를 라벨 안에 넣음
+        const handleSelect = function(item) {
+            label.innerHTML = item.textContent;
+            label.parentNode.classList.remove('active');
+        }
+        // 옵션 클릭시 클릭한 옵션을 넘김
+        options.forEach(function(option){
+            option.addEventListener('click', function(){handleSelect(option)})
+        })
+        // 라벨을 클릭시 옵션 목록이 열림/닫힘
+        label.addEventListener('click', function(){
+            if(label.parentNode.classList.contains('active')) {
+                label.parentNode.classList.remove('active');
+            } else {
+                label.parentNode.classList.add('active');
+            }
+        });
+
         $(function () {
             $('#exampleTable').DataTable({
                 columnDefs: [ {
@@ -646,6 +776,8 @@
                 pageLength: 5,
 
             })
+
+
         })
     </script>
 </div>
