--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -126,6 +126,8 @@
 <script type="text/javascript" th:src="@{/js/switches.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery-validation-1.19.5/dist/jquery.validate.js}"></script>
 <script type="text/javascript" th:src="@{/js/dataTables.select.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
+<script type="text/javascript" th:src="@{/js/select-custom.js}"></script>
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
