--- a/module-admin/src/main/resources/templates/example.html
+++ b/module-admin/src/main/resources/templates/example.html
@@ -26,6 +26,11 @@
         .paginate_button.current {
             background: #ff8031 !important;
         }
+
+        .custom-select-ul > li:hover {
+            background: #f8f7f7;
+            color: #ff8031 !important;
+        }
     </style>
     <div class="page-body">
         <div class="row">
@@ -86,9 +91,9 @@
                             </div>
                             <div class="col-lg-3 col-md-6 mb-3">
                                 <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>customSelect</strong></div>
                                     <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round" id="customNiceSelect" >
                                             <option value="opt1">Select One Value Only</option>
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
@@ -120,6 +125,42 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-3 col-md-6 mb-3">
+                                <div class="mb-0 form-group row">
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
+                                    <div class="col-sm-12">
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select">
+                                            <option value="opt1">Select One Value Only</option>
+                                            <option value="opt2">Type 2</option>
+                                            <option value="opt3">Type 3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 mb-3" >
+                                <div class="mb-0 form-group ">
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>custom</strong></div>
+                                    <div class="col-sm-12">
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select">
+                                            <option value="opt1">Select One Value Only</option>
+                                            <option value="opt2">Type 2</option>
+                                            <option value="opt3">Type 3</option>
+                                        </select>
+                                        <div style="position:relative; display:none;" >
+                                            <button class="form-control form-select form-control-round" style="text-align:left;"> 선택 </button>
+                                            <ul style="width:100%; border-radius: 10px; margin-top: 5px; z-index:2; position:absolute; padding: 0.5em 0; background:white; border:1px solid #585858;" class="custom-select-ul">
+                                                <li style="padding: 0.7em;">option 1</li>
+                                                <li style="padding: 0.7em;">option 1</li>
+                                                <li style="padding: 0.7em;">option 1</li>
+                                                <li style="padding: 0.7em;">option 1</li>
+                                                <li style="padding: 0.7em;">option 1</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="col-lg-3 col-md-6 mb-3">
                                 <div class="mb-0 form-group row">
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
@@ -339,13 +380,11 @@
                                 <div class="mb-0 form-group">
                                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="atchFile"><strong>첨부파일</strong></label>
 
-<!--                                    <div class=" input-group-button">
-                                        <input type="file" name="atchFile" id="atchFile" multiple="" accept="*/*" class="form-control form-control-sm" style="opacity:0 !important; position:absolute">
-                                        <div class="input-file-container">
-                                            <div style="position:relative;" class="form-control form-control-sm form-control-round">파일선택</div>
-                                            <button> 파일 선택</button>
-                                        </div>
-                                    </div>-->
+                                    <div class="form-control form-control-round" style="position:relative;" data-toggle="tooltip" data-placement="top" title="" data-original-title=".btn-danger.badge">
+                                        <input type="file" style="display:none;" id="fileInput">
+                                        파일등록 (<span class="inserted-file-length">2</span> / <span class="max-file-length">6</span>)
+                                        <button class="file-open-btn">파일선택  </button>
+                                    </div>
 
                                     <div class="mt-2 row">
                                         <div class="col-auto">
@@ -383,25 +422,6 @@
                                             <i class="helper"></i>비공개
                                         </label>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="mb-0 form-group required">
-                            <div class="btn-group dropdown-split-primary">
-                                <button type="button" class="btn btn-primary"><i class="icofont icofont-user-alt-3"></i>Primary</button>
-                                <label for="fileTest" class="btn btn-primary dropdown-toggle dropdown-toggle-split"></label>
-                                <input type="file" id="fileTest" name="fileTest" style="display:none;">
-                                <!--<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="sr-only">Toggle primary</span>
-                                </button>-->
-
-                                <div class="dropdown-menu" >
-                                    <a class="dropdown-item waves-effect waves-light" href="#">Action</a>
-                                    <a class="dropdown-item waves-effect waves-light" href="#">Another action</a>
-                                    <a class="dropdown-item waves-effect waves-light" href="#">Something else here</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item waves-effect waves-light" href="#">Separated link</a>
                                 </div>
                             </div>
                         </div>
@@ -465,7 +485,7 @@
                         </div>
                     </div>
                     <div class="card-block-small">
-                        <button class="btn btn-disabled m-r-5">취소</button>
+                        <button class="btn btn-gray m-r-5">취소</button>
                         <button class="btn btn-primary">저장</button>
                     </div>
                 </div>
@@ -625,8 +645,13 @@
         </div>
     </div>
 
+
     <script>
         $(function () {
+            $('.file-span').on('click',function() {
+                $(this).parent().find('input').click();
+            })
+
             $('#exampleTable').DataTable({
                 columnDefs: [ {
                     orderable: false,
@@ -644,7 +669,6 @@
                 paging: true,
                 info: false,
                 pageLength: 5,
-
             })
         })
     </script>
