design : custom select 태그 구현

--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -120,14 +120,14 @@
 <script type="text/javascript" th:src="@{/files/bower_components/bootstrap-multiselect/dist/js/bootstrap-multiselect.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/multiselect/js/jquery.multi-select.js}"></script>
 <script type="text/javascript" th:src="@{/files/assets/js/jquery.quicksearch.js}"></script>
-
+<!-- Nice Select js-->
+<script type="text/javascript" th:src="@{/js/nice-select/js/jquery.nice-select.js}"></script>
 <!-- Custom js -->
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/select2-custom.js}"></script>
 <script type="text/javascript" th:src="@{/js/switches.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery-validation-1.19.5/dist/jquery.validate.js}"></script>
 <script type="text/javascript" th:src="@{/js/dataTables.select.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
-<script type="text/javascript" th:src="@{/js/select-custom.js}"></script>
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
