--- a/module-admin/src/main/resources/templates/tabExample.html
+++ b/module-admin/src/main/resources/templates/tabExample.html
@@ -5,61 +5,7 @@
 
 <div layout:fragment="content">
     <div class="page-body">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="card">
-                    <div class="card-block">
-                        <div class="row m-b-30">
-                            <div class="col-lg-12">
-                                <div class="tab-content card-block">
-                                    <div class="tab-pane"  role="tabpanel">
-                                        <p class="m-0">1. This is Photoshop's version of
-                                            Lorem IpThis is Photoshop's version of Lorem
-                                            Ipsum. Proin gravida nibh vel velit auctor
-                                            aliquet. Aenean sollicitudin, lorem quis
-                                            bibendum auctor, nisi elit consequat ipsum,
-                                            nec sagittis sem nibh id elit. Lorem ipsum
-                                            dolor sit amet, consectetuer adipiscing
-                                            elit. Aenean commodo ligula eget dolor.
-                                            Aenean mas Cum sociis natoque penatibus et
-                                            magnis dis.....</p>
-                                    </div>
-                                    <div class="tab-pane"  role="tabpanel">
-                                        <p class="m-0">2.Cras consequat in enim ut
-                                            efficitur. Nulla posuere elit quis auctor
-                                            interdum praesent sit amet nulla vel enim
-                                            amet. Donec convallis tellus neque, et
-                                            imperdiet felis amet.</p>
-                                    </div>
-                                    <div class="tab-pane active"  role="tabpanel">
-                                        <p class="m-0">3. This is Photoshop's version of
-                                            Lorem IpThis is Photoshop's version of Lorem
-                                            Ipsum. Proin gravida nibh vel velit auctor
-                                            aliquet. Aenean sollicitudin, lorem quis
-                                            bibendum auctor, nisi elit consequat ipsum,
-                                            nec sagittis sem nibh id elit. Lorem ipsum
-                                            dolor sit amet, consectetuer adipiscing
-                                            elit. Aenean commodo ligula eget dolor.
-                                            Aenean mas Cum sociis natoque penatibus et
-                                            magnis dis.....</p>
-                                    </div>
-                                    <div class="tab-pane" role="tabpanel">
-                                        <p class="m-0">4.Cras consequat in enim ut
-                                            efficitur. Nulla posuere elit quis auctor
-                                            interdum praesent sit amet nulla vel enim
-                                            amet. Donec convallis tellus neque, et
-                                            imperdiet felis amet.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="" style="margin-left:2rem; width:30%;">
+        <div class="nav-main">
             <ul class="nav nav-tabs md-tabs" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="tab" href="#home3" role="tab" aria-selected="false">Home</a>
@@ -87,24 +33,6 @@
                         <div class="card-block">
                             <div class="row m-b-30">
                                 <div class="col-lg-12">
-                             <!--       <ul class="nav nav-tabs md-tabs" role="tablist">
-                                        <li class="nav-item">
-                                            <a class="nav-link" data-bs-toggle="tab" href="#home3" role="tab" aria-selected="false">Home</a>
-                                            <div class="slide"></div>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" data-bs-toggle="tab" href="#profile3" role="tab" aria-selected="false">Profile</a>
-                                            <div class="slide"></div>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link active" data-bs-toggle="tab" href="#messages3" role="tab" aria-selected="true">Messages</a>
-                                            <div class="slide"></div>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" data-bs-toggle="tab" href="#settings3" role="tab" aria-selected="false">Settings</a>
-                                            <div class="slide"></div>
-                                        </li>
-                                    </ul>-->
                                     <div class="tab-content card-block">
                                         <div class="tab-pane" id="home3" role="tabpanel">
                                             <p class="m-0">1. This is Photoshop's version of
