--- a/module-admin/src/main/resources/templates/example.html
+++ b/module-admin/src/main/resources/templates/example.html
@@ -31,6 +31,7 @@
             background: #f8f7f7;
             color: #ff8031 !important;
         }
+
     </style>
     <div class="page-body">
         <div class="row">
@@ -45,11 +46,16 @@
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
                                     <div class="input-group input-group-dropdown mb-0">
                                         <input type="text" class="form-control form-control-round" name="filterKeywordInput" id="filterKeywordInput"/>
-                                        <select name="filterKeywordSelect" class="form-select form-control form-control-round" >
-                                            <option value="opt1">primary</option>
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select" >
+                                            <option value="opt1">Select One Value Only</option>
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
                                         </select>
+                                      <!--  <select name="filterKeywordSelect" class="form-select form-control form-control-round" >
+                                            <option value="opt1">primary</option>
+                                            <option value="opt2">Type 2</option>
+                                            <option value="opt3">Type 3</option>
+                                        </select>-->
                                     </div>
                                 </div>
                             </div>
@@ -57,7 +63,7 @@
                                 <div class="mb-0 form-group row">
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>분류</strong></div>
                                     <div class="col-sm-12">
-                                        <select name="filterCategorySelect" class="form-select form-control form-control-round">
+                                        <select name="filterCategorySelect" class="form-select form-control form-control-round custom-select">
                                             <option value="opt1">전체</option>
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
@@ -69,55 +75,7 @@
                                 <div class="mb-0 form-group row">
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
                                     <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
-                                            <option value="opt1">Select One Value Only</option>
-                                            <option value="opt2">Type 2</option>
-                                            <option value="opt3">Type 3</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 mb-3">
-                                <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
-                                    <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
-                                            <option value="opt1">Select One Value Only</option>
-                                            <option value="opt2">Type 2</option>
-                                            <option value="opt3">Type 3</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 mb-3">
-                                <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>customSelect</strong></div>
-                                    <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round" id="customNiceSelect" >
-                                            <option value="opt1">Select One Value Only</option>
-                                            <option value="opt2">Type 2</option>
-                                            <option value="opt3">Type 3</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 mb-3">
-                                <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
-                                    <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
-                                            <option value="opt1">Select One Value Only</option>
-                                            <option value="opt2">Type 2</option>
-                                            <option value="opt3">Type 3</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 mb-3">
-                                <div class="mb-0 form-group row">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
-                                    <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select">
                                             <option value="opt1">Select One Value Only</option>
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
@@ -137,35 +95,23 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-lg-3 col-md-6 mb-3" >
-                                <div class="mb-0 form-group ">
-                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>custom</strong></div>
+                            <div class="col-lg-3 col-md-6 mb-3">
+                                <div class="mb-0 form-group row">
+                                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>커스텀 셀렉트</strong></div>
                                     <div class="col-sm-12">
                                         <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select">
                                             <option value="opt1">Select One Value Only</option>
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
                                         </select>
-                                        <div style="position:relative; display:none;" >
-                                            <button class="form-control form-select form-control-round" style="text-align:left;"> 선택 </button>
-                                            <ul style="width:100%; border-radius: 10px; margin-top: 5px; z-index:2; position:absolute; padding: 0.5em 0; background:white; border:1px solid #585858;" class="custom-select-ul">
-                                                <li style="padding: 0.7em;">option 1</li>
-                                                <li style="padding: 0.7em;">option 1</li>
-                                                <li style="padding: 0.7em;">option 1</li>
-                                                <li style="padding: 0.7em;">option 1</li>
-                                                <li style="padding: 0.7em;">option 1</li>
-                                            </ul>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-lg-3 col-md-6 mb-3">
                                 <div class="mb-0 form-group row">
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>상태</strong></div>
                                     <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
+                                        <select name="filterStatusSelect" class="form-select form-control form-control-round custom-select">
                                             <option value="opt1">Select One Value Only</option>
                                             <option value="opt2">Type 2</option>
                                             <option value="opt3">Type 3</option>
@@ -379,11 +325,10 @@
                             <div class="col-12 mb-3">
                                 <div class="mb-0 form-group">
                                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="atchFile"><strong>첨부파일</strong></label>
-
-                                    <div class="form-control form-control-round" style="position:relative;" data-toggle="tooltip" data-placement="top" title="" data-original-title=".btn-danger.badge">
+                                    <div class="form-control form-control-round" style="position:relative;">
                                         <input type="file" style="display:none;" id="fileInput">
-                                        파일등록 (<span class="inserted-file-length">2</span> / <span class="max-file-length">6</span>)
-                                        <button class="file-open-btn">파일선택  </button>
+                                            파일등록 (<span class="current-file-length">0</span> / <span class="max-file-length">6</span>)
+                                        <button class="file-open-btn">파일선택</button>
                                     </div>
 
                                     <div class="mt-2 row">
@@ -653,13 +598,13 @@
             })
 
             $('#exampleTable').DataTable({
-                columnDefs: [ {
+                columnDefs: [{
                     orderable: false,
                     className: 'select-checkbox',
-                    targets:   0
-                } ],
+                    targets: 0
+                }],
                 select: {
-                    style:    'os',
+                    style: 'os',
                     selector: 'td:first-child'
                 },
 
@@ -669,7 +614,7 @@
                 paging: true,
                 info: false,
                 pageLength: 5,
-            })
+            });
         })
     </script>
 </div>
