--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -51,9 +51,9 @@
         <link rel="stylesheet" type="text/css" th:href="@{/css/admin.common.css}">
         <link rel="stylesheet" type="text/css" th:href="@{/css/datatables.css}">
         <link rel="stylesheet" type="text/css" th:href="@{/css/datatables-select.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/js/nice-select/css/nice-select.css}">
 
-        <script type="text/javascript" src="/files/bower_components/jquery/dist/jquery.min.js"></script>
-
+        <script type="text/javascript" th:src="@{/files/bower_components/jquery/dist/jquery.min.js}"></script>
     </head>
 </th:block>
 </html>
